--- a/edit/egov-impl/main.adoc
+++ b/edit/egov-impl/main.adoc
@@ -39,10 +39,9 @@ include::015_Metadata_Exchange.adoc[]
 include::020_Name_Identifiers.adoc[]
 include::030_Attribute_Name_Formats.adoc[]
 include::040_BrowserSSO.adoc[]
-include::043_Message_Encryption_eGov.adoc[]
-include::061_Authentication_Request.adoc[]
-include::062_Response.adoc[]
-include::070_IDP_Proxy_eGov.adoc[]
+include::050_HoK.adoc[]
+include::060_IDP_Proxy_eGov.adoc[]
+include::070_SLO.adoc[]
 include::080_Single_Logout_eGov.adoc[]
 include::090_Algorithm_Support.adoc[]
 include::100_bibliography_eGov.adoc[]
