--- a/edit/egov-impl/070_SLO.adoc
+++ b/edit/egov-impl/070_SLO.adoc
@@ -1,5 +1,9 @@
 === Single Logout
-This section defines an implementation profile of the SAML V2.0 Single Logout Profile <<SAML2Prof>>.
+[width="100%", cols="3,2,2,2,25", options="header"]
+|====================
+| RequID   |  IDP  | SP   | Line | Requirement
+| eGOV-090 |  MUST | MUST | 367  | This section defines an implementation profile of the SAML V2.0 Single Logout Profile <<SAML2Prof>>.
+|====================
 For clarification, the technical requirements for each message type below reflect the intent to normatively require initiation of logout by a Service Provider using either the front- or back-channel, and initiation/propagation of logout by an Identity Provider using the back-channel.
 
 ==== Logout Requests
@@ -8,21 +12,22 @@ For clarification, the technical requirements for each message type below reflec
 [width="100%", cols="3,2,2,2,25", options="header"]
 |====================
 | RequID   |  IDP  | SP   | Line | Requirement
-| eGOV-090 |  MUST |      | 375  | Support the SAML SOAP (using HTTP as a transport) binding [SAML2Bind] for the issuance of <saml2p:LogoutRequest> messages.
-| eGOV-091 |  MUST |      | 377  | Support the SAML SOAP (using HTTP as a transport) and HTTP-Redirect bindings [SAML2Bind] for the reception of <saml2p:LogoutRequest> messages.
-| eGOV-092 |       | MUST | 380  | Support the SAML SOAP (using HTTP as a transport) binding [SAML2Bind] for both issuance and reception of <saml2p:LogoutRequest> messages.
-| eGOV-093 |  MUST | MUST | 384  | Support the use of SAML message signatures and TLS server authentication to authenticate <saml2p:LogoutRequest> messages.
-| eGOV-094 |  MUST | MUST | 388  | Support the use of XML Encryption via the <saml2:EncryptedID> element when using the HTTP-Redirect binding.
+| eGOV-091 |  MUST |      | 375  | Support the SAML SOAP (using HTTP as a transport) binding [SAML2Bind] for the issuance of <saml2p:LogoutRequest> messages.
+| eGOV-092 |  MUST |      | 377  | Support the SAML SOAP (using HTTP as a transport) and HTTP-Redirect bindings [SAML2Bind] for the reception of <saml2p:LogoutRequest> messages.
+| eGOV-093 |       | MUST | 380  | Support the SAML SOAP (using HTTP as a transport) binding [SAML2Bind] for both issuance and reception of <saml2p:LogoutRequest> messages.
+| eGOV-094 |  MUST | MUST | 384  | Support the use of SAML message signatures and TLS server authentication to authenticate <saml2p:LogoutRequest> messages.
+| eGOV-095 |  MUST | MUST | 388  | Support the use of XML Encryption via the <saml2:EncryptedID> element when using the HTTP-Redirect binding.
 |====================
 
 .User Interface Behavior
 [width="100%", cols="3,2,2,2,25", options="header"]
 |====================
 | RequID   |  IDP  | SP   | Line | Requirement
-| eGOV-095 |  MUST | MUST | 392  | Support both user-initiated termination of the local session only and user-initiated Single Logout.
-| eGOV-096 |  MUST |      | 393  | Upon receipt of a <saml2p:LogoutRequest> message via a front-channel binding, support user intervention governing the choice of propagatin logout to other Service Providers, or limiting the operation to the Identity Provider. Of course, implementations MUST return status information to the requesting entity (e.g. partial logout indication) as appropriate.
-| eGOV-097 |       | MUST | 399  | Support both user-initiated termination of the local session only and user-initiated Single Logout.
-| eGOV-097 |  MUST |      | 399  | Support the administrative initiation of Single Logout for any active session, subject to appropriate policy.
+| eGOV-096 |  MUST |      | 392  | Support both user-initiated termination of the local session only and user-initiated Single Logout.
+| eGOV-097 |  MUST |      | 393  | Upon receipt of a <saml2p:LogoutRequest> message via a front-channel binding, support user intervention governing the choice of propagating logout to other Service Providers, or limiting the operation to the Identity Provider.
+| eGOV-098 |  MUST |      | 393  | Return status information to the requesting entity (e.g. partial logout indication) as appropriate when using front-channel binding.
+| eGOV-099 |       | MUST | 399  | Support both user-initiated termination of the local session only and user-initiated Single Logout.
+| eGOV-100 |  MUST |      | 399  | Support the administrative initiation of Single Logout for any active session, subject to appropriate policy.
 
 |====================
 
@@ -32,7 +37,7 @@ For clarification, the technical requirements for each message type below reflec
 [width="100%", cols="3,2,2,2,25", options="header"]
 |====================
 | RequID   |  IDP  | SP   | Line | Requirement
-| eGOV-100 |  MUST |      | 405  | Support the SAML SOAP (using HTTP as a transport) and HTTP-Redirect bindings [SAML2Bind] for the issuance of <saml2p:LogoutResponse> messages.
-| eGOV-101 |  MUST |      | 407  | Support the SAML SOAP (using HTTP as a transport) binding [SAML2Bind] for the reception of <saml2p:LogoutResponse> messages.
-| eGOV-102 |       | MUST | 414  | Support the use of SAML message signatures and TLS server authentication to authenticate <saml2p:LogoutResponse> messages.
+| eGOV-101 |  MUST |      | 405  | Support the SAML SOAP (using HTTP as a transport) and HTTP-Redirect bindings [SAML2Bind] for the issuance of <saml2p:LogoutResponse> messages.
+| eGOV-102 |  MUST |      | 407  | Support the SAML SOAP (using HTTP as a transport) binding [SAML2Bind] for the reception of <saml2p:LogoutResponse> messages.
+| eGOV-103 |       | MUST | 414  | Support the use of SAML message signatures and TLS server authentication to authenticate <saml2p:LogoutResponse> messages.
 |====================
